<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/sourcesanspro_bold"/>
    <TextView
        android:id="@+id/job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musician"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/sourcesanspro_light"/>
    <TextView
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/sourcesanspro_regular"/>

</LinearLayout>