<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="100dp"
    android:layout_height="150dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/colorBlack"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:visibility="gone"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:text="@string/app_name"
                android:fontFamily="@font/sourcesanspro_bold" />

            <TextView
                android:visibility="gone"
                android:textSize="16sp"
                android:id="@+id/season_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/season_1"
                android:textColor="@color/colorWhite" />
            <TextView
                android:textSize="16sp"
                android:visibility="gone"
                android:id="@+id/episode_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/episodes"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/air_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="12sp"
                android:visibility="gone"
                android:text="@string/_2019_12_29"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
