<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/colorWhite"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    app:cardElevation="2dp"
    android:layout_width="350dp"
    android:layout_height="180dp">

    <LinearLayout
        android:id="@+id/movies_layout"
        android:paddingEnd="8dp"
        android:paddingStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_cover"
            android:src="@drawable/poster" />

        <LinearLayout
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rating_image"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/ratings"
                android:scaleType="centerCrop"
                android:src="@drawable/star"
                android:tint="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/app_name"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:fontFamily="@font/sourcesanspro_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2019_12_29"
                android:textColor="@color/colorGreyLight" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:maxLines="4"
                android:overScrollMode="ifContentScrolls"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="@color/colorGreyLight" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:numStars="10"
                    android:stepSize="0.1"
                    android:layout_gravity="center_horizontal"
                    android:isIndicator="true" />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/rating"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
