<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Translucent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:background="@color/colorDarkBlack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorGreyLight"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/backdrop_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@color/colorBlack"
                android:contentDescription="@string/movie_backdrop"
                android:scaleType="centerCrop"
                android:src="@drawable/backdrop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="-89dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:orientation="horizontal"
            android:translationZ="@dimen/fab_margin">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="1dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/poster_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/popular"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_light"
                    android:text="@string/_5_0"
                    android:textColor="@color/colorWhite" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="10"
                    android:progressBackgroundTint="@color/colorGreyLight"
                    android:progressTint="@color/colorGoldenYellow"
                    android:rating="1"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/_2019_12_29"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/run_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/run_time"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/sourcesanspro_bold"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/directed_by_mwaka_ambrose"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/casts"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/storyline"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/moview_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/seasons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/seasons"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seasons_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:text="@string/crew"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crew_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>